[package]
name = "jstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-smithy-json = "0.60"
aws-smithy-types = "1"
clap = { version = "4", features = ["derive"] }
itoa = "1"
ryu = "1"

[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal"] }

[profile.release]
codegen-units = 1
lto = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
codegen-units = 1
lto = true
